Version 19.0 (20??-??-??)
-------------------------
- New button to duplicate a custom command [https://github.com/clechasseur/pathcopycopy/issues/114]
- New custom command element to inject drive's label into path (expert only) [https://github.com/clechasseur/pathcopycopy/issues/108]
- Icon selected for Copy Long Path command now shows up in main menu too [https://github.com/clechasseur/pathcopycopy/issues/110]
- Following symbolic links work even if the symbolic link is part of the path and not its target [https://github.com/clechasseur/pathcopycopy/issues/118]


Version 18.0 (2020-01-25)
-------------------------
- Now requires Windows Vista at a minimum [https://github.com/clechasseur/pathcopycopy/issues/83]
- Installer now offers to install for all users or for current user only [https://github.com/clechasseur/pathcopycopy/issues/79]
- New option to copy paths of shortcut (.lnk) files themselves [https://github.com/clechasseur/pathcopycopy/issues/7]
- New custom command element to follow symbolic links [https://github.com/clechasseur/pathcopycopy/issues/99]
- New custom command element to replace parts of path with environment variable references if possible [https://github.com/clechasseur/pathcopycopy/issues/65]
- Custom commands can now be based on other custom commands [https://github.com/clechasseur/pathcopycopy/issues/92]
- Windows can no longer appear offscreen when their saved size/position makes no sense with the current monitor setup [https://github.com/clechasseur/pathcopycopy/issues/101]


Version 17.1.1 (2019-11-16)
-------------------------
- Exporting user settings now works on Windows XP [https://github.com/clechasseur/pathcopycopy/issues/96]
- When exporting user settings fails, display more information [https://github.com/clechasseur/pathcopycopy/issues/96]


Version 17.1 (2019-09-29)
-------------------------
- Installer and uninstaller are now signed with a valid open-source certificate [https://github.com/clechasseur/pathcopycopy/issues/25]