@@ -74,6 +74,7 @@ namespace PCC
         bool            GetAlwaysShowSubmenu() const;
         std::wstring    GetPathsSeparator() const;
         bool            GetTrueLnkPaths() const;
+        std::wstring    GetWSLPathPrefix() const;
         bool            GetCtrlKeyPlugin(GUID& p_rPluginId) const;
         bool            GetMainMenuPluginDisplayOrder(GUIDV& p_rvPluginIds) const;
         bool            GetSubmenuPluginDisplayOrder(GUIDV& p_rvPluginIds) const;
