@@ -68,6 +68,7 @@ namespace
     const wchar_t* const    SETTING_ALWAYS_SHOW_SUBMENU                     = L"AlwaysShowSubmenu";
     const wchar_t* const    SETTING_PATHS_SEPARATOR                         = L"PathsSeparator";
     const wchar_t* const    SETTING_TRUE_LNK_PATHS                          = L"TrueLnkPaths";
+    const wchar_t* const    SETTING_WSL_PATH_PREFIX                         = L"WSLPathPrefix";
     const wchar_t* const    SETTING_CTRL_KEY_PLUGIN                         = L"CtrlKeyPlugin";
     const wchar_t* const    SETTING_MAIN_MENU_PLUGIN_DISPLAY_ORDER          = L"MainMenuDisplayOrder";
     const wchar_t* const    SETTING_SUBMENU_PLUGIN_DISPLAY_ORDER            = L"SubmenuDisplayOrder";
@@ -111,6 +112,7 @@ namespace
     constexpr bool          SETTING_ALWAYS_SHOW_SUBMENU_DEFAULT             = true;
     const wchar_t* const    SETTING_PATHS_SEPARATOR_DEFAULT                 = L"";
     constexpr bool          SETTING_TRUE_LNK_PATHS_DEFAULT                  = false;
+    const wchar_t* const    SETTING_WSL_PATH_PREFIX_DEFAULT                 = L"/mnt";
     constexpr double        SETTING_UPDATE_INTERVAL_DEFAULT                 = 604800.0;     // One week, in seconds.
     constexpr bool          SETTING_DISABLE_SOFTWARE_UPDATE_DEFAULT         = false;
 
@@ -513,7 +515,7 @@ namespace PCC
 
         std::wstring pathsSeparator;
         if (PluginUtils::ReadRegistryStringValue(m_UserKey, SETTING_PATHS_SEPARATOR, pathsSeparator) != ERROR_SUCCESS) {
-            pathsSeparator.clear();
+            pathsSeparator = SETTING_PATHS_SEPARATOR_DEFAULT;
         }
         return pathsSeparator;
     }
@@ -536,6 +538,23 @@ namespace PCC
             trueLnkPaths = regTrueLnkPaths != 0;
         }
         return trueLnkPaths;
+    }
+
+    //
+    // Returns the prefix to use to build WSL paths.
+    //
+    // @return WSL path prefix. Defaults to "/mnt".
+    //
+    std::wstring Settings::GetWSLPathPrefix() const
+    {
+        // Perform late-revising.
+        Revise();
+
+        std::wstring wslPathPrefix;
+        if (PluginUtils::ReadRegistryStringValue(m_UserKey, SETTING_WSL_PATH_PREFIX, wslPathPrefix) != ERROR_SUCCESS) {
+            wslPathPrefix = SETTING_WSL_PATH_PREFIX_DEFAULT;
+        }
+        return wslPathPrefix;
     }
 
     //
